--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,122 +1,128 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+	--background: #ffffff;
+	--foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+	:root {
+		--background: #0a0a0a;
+		--foreground: #ededed;
+	}
 }
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+	max-width: 100vw;
+	overflow-x: hidden;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  /* font-family: Arial, Helvetica, sans-serif; */
-  font-family: "Inter", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	color: var(--foreground);
+	background: var(--background);
+	/* font-family: Arial, Helvetica, sans-serif; */
+	font-family: "Inter", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
 }
 
 a {
-  color:none !important;
-  text-decoration: none;
+	color: none !important;
+	text-decoration: none;
 }
 
 @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+	html {
+		color-scheme: dark;
+	}
 }
 
 /* common css */
 /* color */
-.text_black{
-  color:#000000;
-}
-.text_primary{
-  color:#e12b3e
+.text_black {
+	color: #000000;
 }
 
-.icon_s16{
-  width: 16px;
-  height: auto;
+.text_primary {
+	color: #e12b3e
 }
-.icon_s14{
-  width: 14px;
-  height: 14px;
+
+.icon_s16 {
+	width: 16px;
+	height: auto;
 }
-.icon_s15{
-  width: 15px;
-  height: 15px;
+
+.icon_s14 {
+	width: 14px;
+	height: 14px;
 }
+
+.icon_s15 {
+	width: 15px;
+	height: 15px;
+}
+
 .primary_btn {
-  background: linear-gradient(to left, #e12b3e 50%, #e12b3ee6 50%);
-  background-size: 200% 100%;
-  background-position: right;
-  transition: background-position 0.2s ease-out;
-  outline: 0;
-  border: 0;
-  width: fit-content;
-  color: #ffff !important;
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  font-weight: normal;
-  overflow: hidden;
-  white-space: nowrap;
-  border-radius: 8px;
+	background: linear-gradient(to left, #e12b3e 50%, #e12b3ee6 50%);
+	background-size: 200% 100%;
+	background-position: right;
+	transition: background-position 0.2s ease-out;
+	outline: 0;
+	border: 0;
+	width: fit-content;
+	color: #ffff !important;
+	padding: 0.5rem 1rem;
+	font-size: 1rem;
+	font-weight: normal;
+	overflow: hidden;
+	white-space: nowrap;
+	border-radius: 8px;
 }
 
 .primary_btn:hover {
-  background-position: left;
-  color: white;
+	background-position: left;
+	color: white;
 }
 
 .main_solution_hero .primary_fill_btn {
-  background-color: #E12B3E;
-  outline: 0;
-  border: 0;
-  width: fit-content;
-  color: #ffff !important;
-  padding: 0.5rem 1rem;
-  font-size: 14px;
-  font-weight:400;
-  overflow: hidden;
-  white-space: nowrap;
-  border-radius: 12px;
+	background-color: #E12B3E;
+	outline: 0;
+	border: 0;
+	width: fit-content;
+	color: #ffff !important;
+	padding: 0.5rem 1rem;
+	font-size: 14px;
+	font-weight: 400;
+	overflow: hidden;
+	white-space: nowrap;
+	border-radius: 12px;
 }
+
 .main_solution_hero .primary_fill_btn {
-  background-color: #E12B3E !important;
+	background-color: #E12B3E !important;
 }
 
 .main_solution_hero .secondary_fill_btn {
-  background-color: #FFF0F2;
-  outline: 0;
-  border: 0;
-  width: fit-content;
-  color: #E12B3E !important;
-  padding: 0.5rem 1rem;
-  font-size: 14px;
-  font-weight:400;
-  overflow: hidden;
-  white-space: nowrap;
-  border-radius: 12px;
+	background-color: #FFF0F2;
+	outline: 0;
+	border: 0;
+	width: fit-content;
+	color: #E12B3E !important;
+	padding: 0.5rem 1rem;
+	font-size: 14px;
+	font-weight: 400;
+	overflow: hidden;
+	white-space: nowrap;
+	border-radius: 12px;
 }
-.main_solution_hero .secondary_fill_btn:hover{
-  background-color: #FFF0F2;
+
+.main_solution_hero .secondary_fill_btn:hover {
+	background-color: #FFF0F2;
 }
 
 
@@ -124,167 +130,456 @@ a {
 /* end common css */
 
 /* header */
-.main_header{
-  background-color: #ffff !important;
-  color:#4b5563
+.main_header {
+	background-color: #ffff !important;
+	color: #4b5563
 }
-.navbar-brand{
-  color:#e12b3e !important;
-  margin-right: 3rem !important;
+
+.navbar-brand {
+	color: #e12b3e !important;
+	margin-right: 3rem !important;
 }
+
 .main_header .nav-item {
-  position: relative;
-  margin-right: 2rem;
+	position: relative;
+	margin-right: 2rem;
 }
-.main_header .nav-item::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%) scaleX(0);
-  transform-origin: center;
-  width: 100%;
-  height: 2px;
-  background-color: #e12b3e;
-  transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);
+
+.main_header .nav-item:not(.dropdown)::after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%) scaleX(0);
+	transform-origin: center;
+	width: 100%;
+	height: 2px;
+	background-color: #e12b3e;
+	transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main_header .nav-item:hover::after {
-  transform: translateX(-50%) scaleX(1);
+	transform: translateX(-50%) scaleX(1);
 }
-.main_header .nav-link:hover{
-  color:#e12b3e;
+
+.main_header .nav-link:hover {
+	color: #e12b3e;
 }
-.main_header .dropdown-menu{
-  position: absolute;
-  margin-top: 0.1rem;
-  border: 0px;
-  outline: 0;
-  box-shadow: 0 0 #0000,0 0 #0000, 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  border:1px solid #f3f4f6;
-  background-color: #ffff;
-  padding:1rem;
-  border-radius: 16px;
+
+.main_header .dropdown-menu {
+	position: absolute;
+	margin-top: 0.1rem;
+	border: 0px;
+	outline: 0;
+	box-shadow: 0 0 #0000, 0 0 #0000, 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+	border: 1px solid #f3f4f6;
+	background-color: #ffff;
+	padding: 1rem;
+	border-radius: 16px;
 }
+
 .dropdown-toggle::after {
-  display:none !important;
+	display: none !important;
 }
-.arrow_down_icon{
-  width: 16px;
-  height: 16px;
-  transition: transform 0.3s ease;
+
+.arrow_down_icon {
+	width: 16px;
+	height: 16px;
+	transition: transform 0.3s ease;
 }
+
 .arrow_down_icon.rotate {
-  transform: rotate(180deg);
+	transform: rotate(180deg);
 }
-.dropdown > .solutionShow{
-  display: block;
+
+.dropdown>.solutionShow {
+	display: block;
 }
-.main_header .round_circle{
-  width: 2rem;
-  background-color: #e12b3e1a;
-  aspect-ratio: 1;
-  border-radius: 50%; /* makes it actually round */
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
+.main_header .round_circle {
+	width: 2rem;
+	background-color: #e12b3e1a;
+	aspect-ratio: 1;
+	border-radius: 50%;
+	/* makes it actually round */
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
-.main_header .dropdown-menu .round_circle .icon{
-  width: 16px; /* or whatever size you want */
-  height: auto;
-  color:#e12b3e;
+
+.main_header .dropdown-menu .round_circle .icon {
+	width: 16px;
+	/* or whatever size you want */
+	height: auto;
+	color: #e12b3e;
 }
-.dropedown_navlink{
-  font-size: 16px;
+
+.dropedown_navlink {
+	font-size: 16px;
 }
-.dropedown_navlink:hover{
-  color:#e12b3e;
+
+.dropedown_navlink:hover {
+	color: #e12b3e;
 }
-.dropedown_navitem{
-  font-size: 16px;
-  color:#6b7280;
+
+.dropedown_navitem {
+	font-size: 16px;
+	color: #6b7280;
 }
 
 .arrow_right_icon {
-  width: 1rem;
-  height: auto;
-  color: #ffff;
-  margin-left: 0.5rem; /* space between text and arrow */
-  transition: transform 0.2s ease-out; /* smooth movement */
+	width: 1rem;
+	height: auto;
+	color: #ffff;
+	margin-left: 0.5rem;
+	/* space between text and arrow */
+	transition: transform 0.2s ease-out;
+	/* smooth movement */
 }
 
 .primary_btn:hover .arrow_right_icon {
-  transform: translateX(5px); /* slight move to the right */
+	transform: translateX(5px);
+	/* slight move to the right */
 }
 
-.main_header .signIn_btn{
-  background-color: transparent;
-  color: #e12b3e !important ;
-  outline: 0;
-  border: 0;
-  width: fit-content;
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  font-weight: normal;
-  overflow: hidden;
-  white-space: nowrap;
-  border-radius: 8px;
+.main_header .signIn_btn {
+	background-color: transparent;
+	color: #e12b3e !important;
+	outline: 0;
+	border: 0;
+	width: fit-content;
+	padding: 0.5rem 1rem;
+	font-size: 1rem;
+	font-weight: normal;
+	overflow: hidden;
+	white-space: nowrap;
+	border-radius: 8px;
 }
-.signIn_btn .user_icon{
-  width: 16px;
-  height: auto;
+
+.signIn_btn .user_icon {
+	width: 16px;
+	height: auto;
 }
-.signIn_btn:hover{
-  background-color:#e12b3e0d !important;
+
+.signIn_btn:hover {
+	background-color: #e12b3e0d !important;
 }
-.customer_icon{
-  width: 16px;
-  aspect-ratio: 1;
+
+.customer_icon {
+	width: 16px;
+	aspect-ratio: 1;
 }
-.contact p, .email p{
-  font-size: 14px;
+
+.contact p,
+.email p {
+	font-size: 14px;
 }
+
 .icons .social_icon {
- color:#ffff;
+	color: #ffff;
 }
-.top_navbar{
-  background-image: linear-gradient(to right, rgb(225 43 62 / 0.9), rgb(147 51 234 / 0.9));
+
+.top_navbar {
+	background-image: linear-gradient(to right, rgb(225 43 62 / 0.9), rgb(147 51 234 / 0.9));
 }
-.dropdown{
-  color:#fff;
-  font-size: 0.875rem !important;
+
+.dropdown {
+	color: #fff;
+	font-size: 0.875rem !important;
 }
-.select_language{
-  border-left: 1px solid #fff;
+
+.select_language {
+	border-left: 1px solid #fff;
 }
+
 .dropdown-menu .menu_language {
-  display: none;
-  position: absolute;
-  top: 100%;
-  right: 0;
-  z-index: 1000;
-  background-color: white;
-  color: #fff;
-  overflow: hidden;
-  border-radius: 0.25rem;
-  padding: 0px !important;
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-  min-width:6rem !important;
+	display: none;
+	position: absolute;
+	top: 100%;
+	right: 0;
+	z-index: 1000;
+	background-color: white;
+	color: #fff;
+	overflow: hidden;
+	border-radius: 0.25rem;
+	padding: 0px !important;
+	box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+	min-width: 6rem !important;
 }
+
 .dropdown-item {
-  width: fit-content;
-  font-size: 0.875rem;
+	width: fit-content;
+	font-size: 0.875rem;
+	padding: 0 0 0 1rem!important;
+	border-radius: 1rem;
+	overflow: hidden;
 }
-.dropdown.show .dropdown-menu .menu_language{
-  display: block;
+
+.dropdown.show .dropdown-menu .menu_language {
+	display: block;
 }
-.dropdown-menu .menu_languag .dropdown-item:hover{
-  background-color:#2727fb !important;
-  color:#fff !important;
-  
+
+.dropdown-menu .menu_languag .dropdown-item:hover {
+	background-color: #2727fb !important;
+	color: #fff !important;
+
 }
-.nav_btn{
-  border-left:1px solid #ebebeb;
+
+.nav_btn {
+	border-left: 1px solid #ebebeb;
 }
 
 /* end header */
+
+
+/* main solution page */
+.main_solution_hero {
+
+}
+.main_solution_bg {
+	background-image: url('/images/pages/each-solution/bg1.png');
+	background-size: auto 400px;
+	background-position: bottom left;
+	background-repeat: no-repeat;
+}
+.main_solution_header {
+	font-weight: 700;
+	font-size: 64px;
+	line-height: 100%;
+	letter-spacing: 0;
+}
+.main_solution_text {
+	font-weight: 700;
+	font-size: 32px;
+	line-height: 100%;
+	letter-spacing: 0;
+	color: #666666;
+}
+.main_solution_left_panel {
+	display: flex;
+	padding: 5rem 2rem 5rem 5rem;
+
+}
+.main_solution_right_panel {
+	background-image: url('/images/pages/each-solution/sortly_solutions.png');
+	background-size: 100% 100%;
+	background-position: top left;
+	background-repeat: no-repeat;
+	height: 550px;
+	overflow: hidden;
+}
+.main_solution_content {
+	padding: 8rem;
+}
+.main_solution_content h1 {
+	font-weight: 700;
+	font-size: 48px;
+}
+.main_solution_content p {
+	font-size: 32px;
+	color: #666666;
+}
+
+
+
+.main_solution_bg2 {
+	background-image: url('/images/pages/each-solution/bg2.png');
+	background-size: 100% 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+	padding: 8rem;
+}
+
+.main_solution_bg3 {
+	padding: 8rem 8rem 0 8rem ;
+}
+.main_solution_bg3 h1 {
+	font-size: 32px;
+	font-weight: 700;
+}
+
+.main_solution_toolkit_box {
+	border-width: 0px 6px 6px 0px;
+	border-style: solid;
+	border-radius: 32px;
+	padding: 24px;
+}
+.main_solution_toolkit_box.green {
+	background-color: #FAFFFE;
+	border-color: #BAF9F2;
+}
+.main_solution_toolkit_box.blue {
+	background-color: #F7FBFE;
+	border-color: #BADBF9;
+}
+.main_solution_toolkit_box h1 {
+	font-size: 24px;
+	font-weight: 700;
+	line-height: 120%;
+}
+.main_solution_toolkit_box p {
+	color: #666666;
+}
+.main_solution_toolkit_box span {
+	font-size: 14px;
+}
+.main_solution_toolkit_box.green span {
+	color: #1BEFD8;
+}
+.main_solution_toolkit_box.blue span {
+	color: #74BAF9;
+}
+
+.main_solution_toolkit_blue_box {
+	background-color: #F7FBFE;
+	border-width: 0px 6px 6px 0px;
+	border-style: solid;
+	border-color: #BAF9F2;
+	border-radius: 32px;
+	padding: 24px;
+}
+.main_solution_toolkit_blue_box h1 {
+	font-size: 24px;
+	font-weight: 700;
+	line-height: 120%;
+}
+.main_solution_toolkit_blue_box p {
+	color: #666666;
+}
+.main_solution_toolkit_blue_box span {
+	color: #1BEFD8;
+	font-size: 14px;
+}
+
+.main_solution_bg4_box{
+	padding: 0 8rem;
+}
+.main_solution_bg4 {
+	background-image: url('/images/pages/each-solution/bg4.svg');
+	background-size: 100% 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+	padding: 3rem;
+	height: 500px;
+}
+.main_solution_bg4 img {
+	width: 400px;
+}
+
+.main_solution_bg5 {
+	padding: 8rem;
+}
+.main_solution_bg5 h1 {
+	font-weight: 700;
+	font-size: 48px;
+}
+.main_solution_bg5 p {
+	font-size: 32px;
+	color: #666666;
+}
+
+.main_solution_bg5_tabs {
+	font-size: 24px;
+	font-weight: 700;
+	color: #666666;
+}
+.main_solution_bg5_tabs.active {
+	color: #E12B3E;
+	border-bottom: 2px solid #E12B3E;
+}
+
+.work_order {
+	width: 200px;
+}
+.work_order h5 {
+	font-weight: 700;
+}
+.work_order p {
+	font-size: 12px !important;
+}
+
+
+/* Code for tablet screen size */
+@media (min-width: 768px) and (max-width: 1199px) {
+	/* Add your styles for tablet here */
+	.main_solution_header {
+		font-size: 48px;
+	}
+	.main_solution_text {
+		font-size: 24px;
+	}
+
+	.main_solution_content {
+		padding: 6rem;
+	}
+	.main_solution_content h1 {
+		font-size: 32px;
+	}
+	.main_solution_content p {
+		font-size: 24px;
+	}
+
+	.main_solution_bg2 {
+		padding: 6rem;
+	}
+
+	.main_solution_bg3 {
+		padding: 6rem 6rem 0 6rem;
+	}
+	.main_solution_bg3 h1 {
+		font-size: 28px;
+	}
+
+	.main_solution_bg4_box{
+		padding: 0 6rem 6rem;
+	}
+	.main_solution_bg4 {
+		height: 400px;
+	}
+}
+
+/* Code for mobile screen size */
+@media (max-width: 768px) {
+	/* Add your styles for mobile here */
+	.main_solution_header {
+		font-size: 32px;
+	}
+	.main_solution_text {
+		font-size: 20px;
+	}
+	.main_solution_left_panel {
+		padding: 3rem 0 3rem 3rem;
+	}
+	.main_solution_right_panel {
+		height: 300px;
+	}
+
+	.main_solution_content {
+		padding: 3rem;
+	}
+	.main_solution_content h1 {
+		font-size: 24px;
+	}
+	.main_solution_content p {
+		font-size: 16px;
+	}
+
+	.main_solution_bg2 {
+		padding: 3rem;
+	}
+
+	.main_solution_bg3 {
+		padding: 3rem 3rem 0 3rem;
+	}
+	.main_solution_bg3 h1 {
+		font-size: 24px;
+	}
+
+	.main_solution_bg4_box{
+		padding: 0 3rem 3rem;
+	}
+	.main_solution_bg4 {
+		height: 300px;
+		padding: 1rem;
+	}
+}
