--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -88,6 +88,59 @@ a {
 	background-position: left;
 	color: white;
 }
+.primary_btn_lg {
+	background: linear-gradient(to left, #e12b3e 50%, #e12b3ee6 50%);
+	background-size: 200% 100%;
+	background-position: right;
+	transition: background-position 0.2s ease-out !important;
+	outline: 0;
+	border: 0 !important;
+	width: fit-content !important;
+	color: #ffff !important;
+	padding: 1.2rem 2rem !important;
+	font-weight: normal;
+	font-size: 1.125rem !important;
+    line-height: 1.75rem !important;
+	overflow: hidden;
+	white-space: nowrap;
+	border-radius: 8px !important;
+}
+
+.primary_btn_lg:hover {
+	background-position: left;
+	color: white;
+}
+.primary_btn_lg .icon{
+	color:#fff !important;
+	width: 28px;
+	height: 28px;
+	vertical-align: text-bottom;
+}
+.white_outline_btn_lg {
+	background-color: #ffff !important;
+	outline: 0;
+	border:2px solid #e12b3e !important;
+	width: fit-content !important;
+	color: #e12b3e !important;
+	padding: 1.2rem 2rem !important;
+	font-size: 1.125rem !important;
+    line-height: 1.75rem !important;
+	font-weight: normal;
+	overflow: hidden;
+	white-space: nowrap;
+	border-radius: 8px !important;
+}
+
+.white_outline_btn:hover {
+	/* background-position: left;
+	color: white; */
+}
+.white_outline_btn_lg .icon{
+	color:#e12b3e !important;
+	width: 25px;
+	height: 25px;
+	/* background-color:#e12b3e; */
+}
 .link_btn {
 	background-color: transparent;
 	outline: 0;
@@ -161,6 +214,39 @@ a {
 	background-color: #FFF0F2;
 }
 
+
+/* bredcrumb */
+.breadcrumb-wrapper {
+	background-color: #fff;
+	padding: 20px 0;
+  }
+
+  .breadcrumb {
+	margin: 0;
+	background-color: transparent;
+	font-size: 12px;
+  }
+
+  .breadcrumb .breadcrumb-item + .breadcrumb-item::before {
+	content:"" !important;
+	display: inline-block;
+	color: #666;
+	background-image: url("/icons/arrow_forward.svg")!important;
+	width:22px;
+	height: 22px;
+	background-size: contain;
+  }
+
+  .breadcrumb .breadcrumb-item .item_link {
+	text-decoration: none;
+	color: #999;
+  }
+
+  .breadcrumb .breadcrumb-item.active {
+	font-weight: 600;
+	color:#505861;
+  }
+/* end bredcrumb */
 @media (min-width: 1400px) {
     
 	.custom_container.container {
@@ -1180,6 +1266,9 @@ a {
 /* end enterprise page */
 
 /* each industry page*/
+.each_industry_hero{
+	margin-top: 102px;
+}
 .each_industry_hero h1{
 	font-size: 64px;
 }
@@ -1238,3 +1327,624 @@ a {
 	margin-bottom: 150px;
   }
 /* each industry end */
+
+/* main feature */
+.main_feature_hero{
+	padding-top:102px;
+	margin-bottom: 143px;
+}
+.main_feature_hero h1{
+	font-size: 64px;
+	font-weight: 700;
+	margin-bottom: 51px;
+}
+.main_feature_hero .main_heading{
+	margin-bottom: 60px;
+}
+.main_feature_hero p{
+	font-weight: 700;
+	font-size: 32px;
+	line-height: 150%;
+	color:#666666;
+	margin-bottom: 51px;
+}
+.hero_img{
+	position: relative;
+	width:100%;
+	height: 747px;
+}
+.toolkit_card{
+	margin-bottom: 47px;
+}
+.toolkit_card .inventory_import_tabs{
+	margin-bottom: 60px;
+}
+.toolkit_cards_container{
+	position: relative;
+}
+.toolkit_cards_container{
+	margin-bottom: 134px;
+}
+.toolkit_bg{
+	aspect-ratio: 16 / 9;
+    width: 69%;
+    top: 2%;
+    z-index: -1;
+    left: -1%;
+}
+.toolkit_bg.toolkit_bg_right{
+	aspect-ratio: 16 / 9;
+	width: 69%;
+	top: 2%;
+	right: -5%; /* 👈 move it slightly outside the right */
+	left: auto; /* reset left if inherited */
+	z-index: -1;
+}
+.toolkit_bg.toolkit_bg_left{
+	top: 0%;
+}
+.toolkit_bg .img_box{
+	width: 100%;
+	height: 100%;
+}
+.toolkit_card .title_tag{
+	color:#E12B3E;
+	font-size: 32px;
+}
+.toolkit_card .title{
+	font-size: 32px;
+	line-height: 100%;
+}
+.toolkit_card .sub_title{
+	font-size: 32px;
+	color:#666666;
+	line-height: 150%;
+}
+.toolkit_card .card{
+	border-radius: 0.75rem;
+	box-shadow: 0px 4px 4px 0px #00000026;
+	border: 0px;
+	outline: 0px;
+
+}
+.toolkit_card .card .card_img{
+	aspect-ratio: 4 / 3;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+	border-radius: 0.75rem;
+}
+.toolkit_card .card .card_img .card-title{
+	font-size: 18px;
+	margin-bottom: 4px;
+}
+.toolkit_card .card .card-text{
+	font-size: 14px;
+	color:#666666;
+
+}
+.footer_top_bg.main_feature{
+	margin-bottom: 183px;
+}
+/* end main feature */
+
+/* help center */
+.help_center_hero{
+	background-image:url('/images/pages/help-center/bg1.svg');
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+.help_center_hero h1{
+	font-size: 50px;
+	margin-bottom: 61px;
+}
+.help_center_hero h1 span{
+	color:#E12B3E;
+}
+.help_card .icon{
+	width:55px;
+	height: 63px;
+}
+.help_card .card-title{
+	color:#333333;
+	font-size: 20px;
+	margin-bottom:0.375rem;
+}
+.help_card .card-text{
+	color:#666666;
+	font-size: 12px;
+}
+.help_card.card{
+	background-color: #FFFCFC;
+	box-shadow: 0px 3.18px 3.18px 0px #F4646440;
+	border: 0px;
+	outline: none;
+}
+
+.help_form .form-wrapper h3{
+	color:#2f333d;
+}
+.help_form .form-wrapper .form-label{
+	font-size: 16px;
+	color:#2f333d;
+}
+.help_form .form-wrapper .form-control, .form-wrapper .form-control:focus{
+	box-shadow: none;
+	outline: none;
+	border-color: #dee2e6;
+}
+.help_form .note{
+	font-size: 14px;
+	color:#5e6d87;
+}
+.help_form .form-wrapper {
+	max-width: 700px;
+	margin-left: auto;
+	margin-right: auto;
+}
+  
+.help_form .file-upload-box {
+	background-color: #f9f9f9;
+	cursor: pointer;
+}
+.help_form .btn-primary.btn-blue{
+	background-color: #484572 !important;
+	box-shadow: none;
+    outline: none;
+    border: none;
+}
+
+/* .bg-light-pink {
+	background: #fff6f6;
+	border-radius: 20px;
+	
+  } */
+  .help-section {
+	/* background: url('/images/pages/help-center/bg2.svg') no-repeat top right;
+	background-color: #fff6f6;
+	background-size: contain;
+	border-radius: 40px; */
+	padding: 60px 30px;
+	margin: 50px auto;
+  }
+  .bg_img{
+	background: url('/images/pages/help-center/bg2.svg') no-repeat top right;
+	background-color: #fff6f6;
+	background-size: contain;
+	/* aspect-ratio: 9/16; */
+	height: 100%;
+	width: 50%;
+    z-index: -1;
+    position: absolute;
+    RIGHT: 0;
+  }
+  .accordion-button:not(.collapsed) {
+    color:#999999 !important;
+    background-color: #ffff !important;
+    box-shadow: none !important;
+}
+
+  .accordion-item {
+	border-radius: 12px !important;
+	overflow: hidden;
+	border: 1px solid #999999;
+	margin-bottom: 20px;
+  }
+
+  .accordion-button {
+	background-color: #fff;
+	font-weight: 500;
+	padding-top: 24px !important;
+	padding-bottom: 24px !important;
+	padding-right: 16px !important;
+	padding-right: 16px !important;
+	color:#999999 !important;
+  }
+
+  .accordion-button::after {
+	/* background-image: none !important; */
+	/* content: "⌄" !important; */
+	background-image: url('/images/pages/help-center/arrow_down.svg') !important;
+	transform: rotate(180deg) !important;
+	transition: transform 0.3s ease !important;
+  }
+
+  .accordion-button.collapsed::after {
+	transform: rotate(0deg) !important;
+  }
+  .accordion-body{
+	padding: 0px 16px 24px 16px !important;
+  }
+
+  .accordion-body ul {
+	padding-left: 0;
+  }
+
+  .accordion-body li {
+	list-style: none;
+	margin-bottom: 12px;
+  }
+
+  .accordion-body a {
+	color: #e3122b;
+	text-decoration: none;
+	font-weight: 500;
+	display: flex;
+	/* justify-content: space-between; */
+	align-items: center;
+  }
+
+  .accordion-body a:hover span {
+	transform: translateX(5px);
+  }
+
+  .accordion-body a span {
+	transition: all 0.3s ease;
+	font-size: 1rem;
+	font-weight: bold;
+  }
+
+  .section-title {
+	font-weight: 700;
+	font-size: 48px;
+	margin-bottom: 41px;
+	color:#333333;
+  }
+  
+  /* kkkkkkkkkkkk */
+  
+.help-section.training {
+	margin-left : 0;
+	margin-right: 0;
+	padding-left: 0;
+	padding-right: 0;
+}
+.help-section .training_resources_bg {
+	background-size: 100% 100%;
+	background-position: top left;
+	background-repeat: no-repeat;
+}
+.help-section .training_resources_bg.bg3 {
+	background-image: url('/images/pages/help-center/bg3.svg');
+}
+.help-section .training_resources_bg.bg4 {
+	background-image: url('/images/pages/help-center/bg3.svg');
+}
+.help-section .training-column {
+	padding: 97px 0;
+	width: 80%;
+}
+
+/* end help center */
+
+/* end help center */
+
+/* about us page */
+.aboutus_hero{
+	padding-top: 3rem;
+	margin-bottom: 100px;
+}
+.aboutus_hero h1{
+	font-size: 64px;
+	color:#000000;
+}
+.aboutus_hero h1 span{
+	font-size: 64px;
+	color:#E12B3E;
+}
+.aboutus_hero p{
+	font-size: 32px;
+	color:#666666;
+}
+.aboutus_hero .hero_img_bg{
+	z-index: -1;
+    color: transparent;
+    position: absolute;
+    left: 55px !important;
+    top: 43px !important;
+}
+.aboutus_hero .leftpanal{
+	padding-right: 136px;
+}
+.aboutus_hero .hero_container{
+	padding-right: 39px;
+    padding-left: 39px;
+	padding-bottom: 5rem;
+}
+.aboutus_hero .about_hero_img{
+	aspect-ratio: 4 / 3;
+}
+.business_potential{
+	margin-bottom: 80px;
+}
+.business_potential h2{
+	font-size: 48px;
+	color: #333333;
+}
+.business_potential p{
+	font-size: 32px;
+	color:#666666;
+}
+.business_potential .content{
+	margin-bottom: 6rem;
+}
+.business_potential{
+	background-image: url('/images/pages/about-us/bg4.svg');
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position:center bottom -30%;
+	width: 100%;
+}
+.sortly_counter_cards{
+	margin-top: 164px;
+	padding-bottom: 167px;
+	padding-top:167px;
+	background-image: url('/images/pages/about-us/bg5.svg');
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position:center left 0;
+	width: 100%;
+	margin-bottom: 89px;
+}
+.sortly_counter_cards p{
+	font-size: 42px;
+}
+.sortly_counter_cards .title{
+	top: calc(0% - 64px);
+    width: 100%;
+}
+.sortly_counter_cards span{
+	color:#E12B3E;
+}
+.sortly_counter_cards .card{
+	box-shadow: 0px 4px 4px 0px #00000040;
+	background-color: #FCFCFC;
+	border-radius: 0.7rem;
+	border:none;
+	outline: none;
+	color:#333333;
+}
+.sortly_counter_cards .card .card-title{
+	font-size: 24px !important;	
+}
+.sortly_counter_cards .card span{
+	font-size: 48px !important;
+	color:#E12B3E;
+	vertical-align: sub;
+}
+.sortly_counter_cards .card .card-text{
+	font-size: 24px !important;
+}
+.talant_locate_cards .card{
+	padding: 33px 25px;
+	box-shadow: 0px 4px 4px 0px #00000040;
+	border: none;
+	outline: none;
+	margin-bottom: 2.5rem;
+
+}
+.talant_locate_cards .card-title{
+	font-weight: 900;
+	font-size: 48px;
+	color:#E12B3E;
+	margin-bottom: 8px;
+}
+.talant_locate_cards .card-subtitle{
+	font-weight: 700;
+	font-size: 24px;
+	color:#333333;
+}
+.talant_locate_cards .card-body{
+	margin-top:83px;
+}
+.talant_locate_img p{
+	font-size: 32px;
+}
+.talant_locate_img p span{
+	font-size: 32px;
+	color:#E12B3E;
+}
+.talant_locate_cards{
+	/* margin-top: 164px; */
+	padding-bottom: 178px;
+    padding-top: 144px;
+	background-image: url('/images/pages/about-us/bg6.svg');
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position:center right 0;
+	width: 100%;
+	margin-bottom: 140px;
+}
+.world_bg{
+	/* margin-top: 164px; */
+	/* padding-bottom: 8px; */
+	padding-top: 65px;
+	background-image: url('/images/pages/about-us/world-map.svg');
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position:center right 0;
+	width: 100%;
+}
+/* end about us page */
+
+/* blogs page start */
+.blogs-card {
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position:center;
+	min-height: 250px;
+}
+.blog-card-overlay {
+	background: rgba(0, 0, 0, 0.4);
+}
+.blogs-card.card1 {
+	background-image: url('/images/pages/blogs/card-bg1.png');
+}
+.blogs-card.card2 {
+	background-image: url('/images/pages/blogs/card-bg2.png');
+}
+.blogs-card .card-title {
+	font-weight: 500;
+	color: white;
+	font-size: 14.77px;
+}
+.blogs-card .card-body {
+	z-index: 2;
+}
+.blogs-card .profile-title {
+	font-size: 12px;
+}
+.blogs-filter .title {
+	font-size: 24px;
+	font-weight: 500;
+}
+.blogs-filter .filter-count {
+	color: #808080;
+}
+.blogs-filter .filter-item {
+	border-bottom: 1px solid #D6D6D6;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	cursor: pointer;
+}
+.blogs-filter .filter-item.active svg path {
+	stroke: #DD2A3B;
+}
+.blogs-filter .filter-item.active .filter-text {
+	color: #DD2A3B;
+}
+.blogs-filter .filter-item:hover svg path {
+	stroke: #DD2A3B;
+}
+.blogs-filter .filter-item:hover .filter-text {
+	color: #DD2A3B;
+}
+.blogs-pages .page-number {
+	color: #626C70;
+	height: 32px;
+	width: 32px;
+	border-radius:50%;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	margin-left: .5rem;
+	margin-right: .5rem;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	cursor: pointer;
+}
+.blogs-pages .page-number:hover {
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+}
+.blogs-pages .page-number.active {
+	background-color: #E12B3E;
+	color: #ffffff;
+}
+.blogs-pages .arrow:hover {
+	border-radius: 50%;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+}
+/* blogs page end */
+
+/* home */
+.home_hero .text_left h1{
+	font-size: 4.5rem;
+	line-height: 1.25;
+}
+.home_hero .text_left h1 span{
+	line-height: 0.1;
+}
+.home_hero .text_left p{
+	font-size: 1.25rem;
+    line-height: 1.75rem;
+	color:#4b5563;
+	margin-top: 32px;
+}
+.gradient-text {
+	font-size: 80px;
+	font-weight: 700;
+	line-height: 1.1;
+	/* background: linear-gradient(90deg, #e91e63, #9c27b0); */
+	background-image: linear-gradient(to right, #E12B3E, #9333ea, #ec4899);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	display: inline-block;
+  }
+  
+.gradient-text span {
+	display: block;
+	margin-top: 10px;
+  }
+.home_hero .home_btn{
+	margin-top: 32px;
+  }
+.home_hero .users_wrapper{
+	margin-top: 2rem;
+}  
+.home_hero .users_wrapper .users{
+	width: 48px;
+    height: 48px;
+    overflow: hidden;
+	border: 1px solid #fff;
+	margin-left: -12px;
+  }
+.home_hero .users_count{
+	width: 48px;
+    height: 48px;
+    overflow: hidden;
+	background-color: #e12b3e1a;
+	border: 1px solid #fff;
+	color:#e12b3e;
+	font-size: 15px;
+	margin-left: -12px;
+  }
+.home_hero .text-right .title{
+	color:#111827;
+  }
+.home_hero .text-right .title_sub{
+	color:#6b7280;
+	font-size: 0.875rem;
+  }
+.home_hero .home_hero_content{
+	margin-left: 96px;
+	margin-right: 96px;
+}
+.hero_img_wrapper{
+	border-radius: 2rem;
+	overflow: hidden;
+	/* filter: blur(24px); */
+	background-image: linear-gradient(
+	  to right,
+	  rgba(225, 43, 62, 0.2),
+	  rgba(168, 85, 247, 0.2),
+	  rgba(236, 72, 153, 0.2)
+	);
+	inset: -1rem;
+}
+
+
+
+/* end home */
+
+/* main solution page start */
+.main-solution-card {
+	background-color: #FFFCFC !important;
+	box-shadow: 0px 1px 3.18px 0px #F4646440 !important;
+	border: 0px !important;
+	outline: none !important;
+	border-radius: 32px !important;
+}
+.bd-top-green {
+	border-top: 6px solid #DAF9BA !important;
+}
+.bd-top-blue {
+	border-top: 6px solid #BAF6F9 !important;
+}
+.bd-top-purple {
+	border-top: 6px solid #DABAF9 !important;
+}
+.bd-top-green2 {
+	border-top: 6px solid #BAF9EE !important;
+}
+/* main solution page end */
